# case-switcher

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.run/: Coverage.run.xml  Python tests in test.py.run.xml
caseswitcher/: __init__.py
src/caseswitcher/: __init__.py
test/: test.py
tests/: test_case_switcher.py
