[tool.poetry]
name = "case-switcher"
version = "1.1.12"
description = "Library to change the casing of strings."
readme = "README.md"
repository = "https://gitlab.com/mburkard/case-switcher"
homepage = "https://gitlab.com/mburkard/case-switcher"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "caseswitcher/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
