[tool.poetry]
name = "case-switcher"
version = "1.2.4"
description = "Library to change the casing of strings."
readme = "README.md"
repository = "https://gitlab.com/mburkard/case-switcher"
homepage = "https://gitlab.com/mburkard/case-switcher"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "caseswitcher/**/*.py" },
    { include = "caseswitcher/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.1.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
