[metadata]
name = case-switcher
version = 0.3.2
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = Library to change the casing of strings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/case-switcher
classifiers = Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
